# marketplace

./: .eslintrc.js  .gitignore  .solhint.json  LICENSE  README.md  TODO.md  config.env.dist  docker-compose.yaml  hardhat.config.ts  hardhat.local.env  package.json  run-ping.sh
chainnode/: Dockerfile  deploy.md  node-api1.toml  node-newpipe.toml  node.toml
contracts/: ApiClient.sol  Authentication.sol  AutoRenewPayment.sol  ITruflationFeedRegistry.sol  PackagePlanPayment.sol  PackagePlanPaymentV2.sol  SubscriptionManager.sol  SubscriptionManagerV4.sol  SubscriptionPayment.sol  SubscriptionTicketManager.sol  SubscriptionTicketManagerV2.sol  TfiClient.sol  TfiExample.sol  TfiFeedAdapter.sol  TfiFeedRegistry.sol  TfiOperator.sol  TfiOracle.sol  TfiSample.sol  TfiToken.sol  TicketURIDescriptor.sol  Truflation.sol  TruflationFeedAdapter.sol  TruflationFeedRegistry.sol  TruflationToken.sol
docs/: aggregator-v2v3.md  feed-interface.md  fees-specification.md  new-blockchain-howto.md  overview.md  token-addresses.md  token-changes.md  typeof.csv
modules/orders/: Dockerfile  install.sh  node.toml  orders.py  pyproject.toml  pytest.ini  setup.cfg  start-local.sh  start.sh
modules/orders/tests/: curl_result.txt  test_curl.sh  test_hello.py
modules/orders/tfi_orders/: __init__.py  fees.py
scripts/: authorize-receiver.ts  config.ts  deploy-client-base.ts  deploy-example-newpipe.ts  deploy-example-tfi.ts  deploy-feed-adapters.ts  deploy-feed-contracts.ts  deploy-feed-registry.ts  deploy-operator-base.ts  deploy-operator-tfi.ts  deploy-operator.ts  deploy-subscription-test.ts  (+8 more)
(+89 files in other folders)
