[project]
name = "tfi_orders"
version = "0.0.1"
dependencies = [
    "eth_abi >= 3.0.1",
    "eth_utils",
    "flask",
    "gunicorn",
    "pytest",
    "cbor2",
    "requests",
    "eth-hash[pycryptodome]"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = [
    "--import-mode=importlib",
]
